Correct layout problems

--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body {
   color: var(--clr-font);
 }
 
+p {
+  line-height: 1.5;
+}
+
 input,
 textarea {
   font-family: inherit;
@@ -64,7 +68,6 @@ header {
   display: flex;
   justify-content: center;
   gap: 2rem;
-  padding: 0;
   list-style-type: none;
 }
 .nav a {
@@ -94,29 +97,18 @@ main {
 
 section {
   width: 100%;
-  max-width: 1000px;
   padding: 3rem;
+}
+.section-wrap {
+  max-width: 900px;
+  margin: 0 auto;
+}
+.section-color {
+  background-color: var(--clr-main);
 }
 
 .section__title {
   margin-bottom: 2rem;
-}
-
-section:nth-child(odd) .section__img {
-  float: left;
-  padding-right: 2rem;
-}
-section:nth-child(even) .section__img {
-  float: right;
-  padding-left: 2rem;
-}
-
-p {
-  line-height: 1.5;
-}
-
-.clear-float {
-  clear: both;
 }
 
 .section__img {
@@ -132,7 +124,6 @@ p {
   align-items: center;
   gap: 2rem;
   padding-top: 3rem;
-  border-top: 6px double var(--clr-font-light);
 }
 
 .card {
@@ -151,18 +142,22 @@ p {
 }
 
 .card__body {
-  position: relative;
-  padding: 1rem 1rem 3rem;
-}
-
-.card__title {
-  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+  padding: 1.5rem;
 }
 
 .card__link {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
+  margin-top: auto;
+  align-self: flex-end;
+}
+
+/* ABOUT */
+#about-me .section__img {
+  float: left;
+  padding-right: 1rem;
 }
 
 /* SKILLS */
